<resources>
    <string name="app_name">Shoe Store Inventory</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_icon">Login Icon</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="welcome_image">Welcome Image</string>
    <string name="welcome_to_our_app">Welcome to our app !</string>
    <string name="next">Next</string>
    <string name="welcome_desc">Welcome to Shoe Store Inventory App , part of Advanced Android Kotlin Nanodegree</string>
    <string name="instruction_image">Instruction Image</string>
    <string name="instructions">Instructions!</string>
    <string name="instructions_desc">Here is the instructions , in the next screen you will see all shoes in inventory and you can add new shoes</string>
    <string name="let_s_start">Let\'s start</string>
    <string name="add_button">Add button</string>
    <string name="shoe_list_scroll_view">Shoe list Scroll View</string>
    <string name="enter_shoe_details">Enter Shoe Details</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="company_name">Company name</string>
    <string name="shoe_size">Shoe size</string>
    <string name="shoe_name">Shoe name</string>
    <string name="description">Description</string>
    <string name="logout">Logout</string>
</resources>